--- a/assignment2/Model/model_cate.ipynb
+++ b/assignment2/Model/model_cate.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "following-boards",
+   "id": "charitable-british",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acceptable-haven",
+   "id": "external-northern",
    "metadata": {},
    "source": [
     "### Feature eng"
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "hungarian-bhutan",
+   "execution_count": 2,
+   "id": "rubber-mattress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,11 +146,63 @@
     "    to_join = pd.read_csv(path)\n",
     "    joined = pd.merge(df, to_join, on=\"prop_id\")\n",
     "    return joined.sort_values(\"srch_id\")\n",
-    "    \n",
+    "\n",
+    "def create_comp_rate_mode(df, fillna_ = -100):\n",
+    "    \"\"\"\n",
+    "    creates a column with the mode of comp_rate columns and fills the rest with -100 (default)\n",
+    "    \"\"\"\n",
+    "    #subset comp_rate\n",
+    "    comp_rate_cols = [col for col in df.columns if col.endswith(\"_rate\")]\n",
+    "    df[\"comp_rate_mode\"] = df[comp_rate_cols].mode(axis = 1, dropna = True)[0]\n",
+    "    df[\"comp_rate_mode\"].fillna(fillna_ , inplace = True)\n",
+    "\n",
+    "def create_comp_inv_mode(df, fillna_ = -100):\n",
+    "    \"\"\"\n",
+    "    creates a column with the mode of comp_inv columns and fills the rest with -100 (default)\n",
+    "    \"\"\"\n",
+    "    comp_inv = [col for col in df.columns if col.endswith(\"_inv\")]\n",
+    "    df[\"comp_inv_mode\"] = df[comp_inv].mode(axis = 1, dropna = True)[0]\n",
+    "    df[\"comp_inv_mode\"].fillna(fillna_ , inplace = True)\n",
+    "\n",
+    "def create_comp_rate_precent_mean(df, fillna_ = -100):\n",
+    "    \"\"\"\n",
+    "    creates a column with the mean of comp_rate_precent columns and fills the rest with -100 (default)\n",
+    "    \"\"\"\n",
+    "    comp_rate_precent = [col for col in df.columns if col.endswith(\"_rate_percent_diff\")]\n",
+    "    df[\"comp_rate_precent_mean\"] = df[comp_rate_precent].mean(axis = 1, dropna = True)[0]\n",
+    "    #df[\"comp_rate_precent_mean\"].fillna(fillna_ , inplace = True)  \n",
+    "\n",
+    "def normalize_features(df_mod, normalizing_var, column):\n",
+    "    # df_mod = dataframe\n",
+    "    # normalizing_var = variable that will be used for normalizing\n",
+    "    # column = variable that will be normalized\n",
+    "\n",
+    "    methods = [\"mean\", \"std\"]\n",
+    "\n",
+    "    df = df_mod.groupby(normalizing_var).agg({column: methods})\n",
+    "\n",
+    "    df.columns = df.columns.droplevel()\n",
+    "    col = {}\n",
+    "    for method in methods:\n",
+    "        col[method] = column + \"_\" + method\n",
+    "\n",
+    "    df.rename(columns=col, inplace=True)\n",
+    "    df_merge = df_mod.merge(df.reset_index(), on=normalizing_var)\n",
+    "    df_merge[column + \"_norm_by_\" + normalizing_var] = (\n",
+    "        df_merge[column] - df_merge[column + \"_mean\"]\n",
+    "    ) / df_merge[column + \"_std\"]\n",
+    "    df_merge = df_merge.drop(labels=[col[\"mean\"], col[\"std\"]], axis=1)\n",
+    "\n",
+    "    return df_merge   \n",
+    "\n",
+    "def add_normalisation(df, target_list = [\"prop_starrating\", \"prop_review_score\", \"prop_location_score1\", \"prop_location_score2\"]):\n",
+    "    for column in target_list:\n",
+    "        df = normalize_features(df, normalizing_var=\"srch_id\", column=column)\n",
+    "    return df \n",
     "    \n",
     "## other ----------------------------------\n",
     "\n",
-    "def remove_cols(df, cols = [\"position\"]):\n",
+    "def remove_cols(df, cols = [\"position\", \"prop_id\"]):\n",
     "    df.drop(cols, axis=1, inplace=True)\n",
     "\n",
     "def remove_positions(df, positions = [5, 11, 17, 23]):\n",
@@ -191,31 +243,39 @@
     "def feature_engineering_train(df):\n",
     "    \n",
     "    extract_time(df)\n",
+    "    create_comp_rate_mode(df)\n",
+    "    create_comp_inv_mode(df)\n",
     "    remove_missing_values(df)\n",
     "    replace_missing_values(df)\n",
     "    new_historical_price(df)\n",
     "    add_price_position(df)\n",
     "    #df = average_numerical_features(df)\n",
     "    #df = add_historical_booking_click(df)\n",
+    "    df = add_normalisation(df)\n",
     "    add_score(df)\n",
-    "    remove_cols(df)\n",
+    "    #remove_cols(df)\n",
     "    return df\n",
+    "\n",
     "\n",
     "def feature_engineering_test(df):\n",
     "    \n",
     "    extract_time(df)\n",
+    "    create_comp_rate_mode(df)\n",
+    "    create_comp_inv_mode(df)\n",
     "    remove_missing_values(df)\n",
     "    replace_missing_values(df)\n",
     "    new_historical_price(df)\n",
     "    add_price_position(df)\n",
     "    #df = average_numerical_features(df)\n",
-    "    return df"
+    "    df = add_normalisation(df)\n",
+    "    return df\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "national-expression",
+   "id": "clinical-native",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "gothic-implementation",
+   "execution_count": 6,
+   "id": "formal-outside",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,39 +322,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 114,
-   "id": "greenhouse-virginia",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def normalize_features(df_mod, normalizing_var, column):\n",
-    "    # df_mod = dataframe\n",
-    "    # normalizing_var = variable that will be used for normalizing\n",
-    "    # column = variable that will be normalized\n",
-    "\n",
-    "    methods = [\"mean\", \"std\"]\n",
-    "\n",
-    "    df = df_mod.groupby(normalizing_var).agg({column: methods})\n",
-    "\n",
-    "    df.columns = df.columns.droplevel()\n",
-    "    col = {}\n",
-    "    for method in methods:\n",
-    "        col[method] = column + \"_\" + method\n",
-    "\n",
-    "    df.rename(columns=col, inplace=True)\n",
-    "    df_merge = df_mod.merge(df.reset_index(), on=normalizing_var)\n",
-    "    df_merge[column + \"_norm_by_\" + normalizing_var] = (\n",
-    "        df_merge[column] - df_merge[column + \"_mean\"]\n",
-    "    ) / df_merge[column + \"_std\"]\n",
-    "    df_merge = df_merge.drop(labels=[col[\"mean\"], col[\"std\"]], axis=1)\n",
-    "\n",
-    "    return df_merge"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "unauthorized-dairy",
+   "id": "english-phenomenon",
    "metadata": {},
    "source": [
     "### Data"
@@ -302,8 +331,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "returning-subcommittee",
+   "execution_count": 7,
+   "id": "muslim-scholarship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,8 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "tutorial-barrier",
+   "execution_count": 8,
+   "id": "computational-anatomy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,8 +354,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "hydraulic-honey",
+   "execution_count": 9,
+   "id": "opened-phone",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,8 +364,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "increasing-causing",
+   "execution_count": 10,
+   "id": "available-england",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,8 +374,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "exempt-cable",
+   "execution_count": 11,
+   "id": "physical-killer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "checked-secretariat",
+   "id": "bronze-subject",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "possible-assignment",
+   "id": "weird-louisiana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "physical-facial",
+   "id": "psychological-purchase",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "exceptional-specific",
+   "id": "radical-bibliography",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "appreciated-specification",
+   "id": "adolescent-effectiveness",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -460,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "unavailable-evening",
+   "id": "introductory-swiss",
    "metadata": {},
    "outputs": [
     {
@@ -533,14 +562,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "treated-pickup",
+   "id": "synthetic-techno",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "choice-humanity",
+   "id": "permanent-vermont",
    "metadata": {},
    "source": [
     "### Parameter tuning"
@@ -549,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "female-simulation",
+   "id": "protecting-adoption",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "yellow-wages",
+   "id": "smart-meditation",
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "after-steal",
+   "id": "arabic-sentence",
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "british-acoustic",
+   "id": "studied-motor",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "outstanding-graphic",
+   "id": "outside-victory",
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "revolutionary-selling",
+   "id": "historical-panel",
    "metadata": {},
    "source": [
     "### Tuning normalized features"
@@ -949,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "derived-hacker",
+   "id": "infectious-pocket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "stunning-brown",
+   "id": "municipal-smith",
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "naughty-reservoir",
+   "id": "naval-pasta",
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "engaging-judgment",
+   "id": "announced-partition",
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "based-revelation",
+   "id": "going-contribution",
    "metadata": {},
    "source": [
     "### Model"
@@ -1148,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "successful-dominican",
+   "id": "turkish-commitment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "published-database",
+   "id": "palestinian-satisfaction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "sweet-regulation",
+   "id": "changing-patient",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1187,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "driven-boulder",
+   "id": "married-nature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1197,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "sitting-coordination",
+   "id": "bound-portland",
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "governmental-assist",
+   "id": "serious-minority",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "powered-portuguese",
+   "id": "medium-stability",
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "liable-assets",
+   "id": "unlike-traffic",
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "engaged-netscape",
+   "id": "solar-despite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "based-comment",
+   "id": "photographic-registrar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "suspended-variable",
+   "id": "still-jacket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1362,7 +1391,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "extreme-bracelet",
+   "id": "boolean-nightlife",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "pleasant-drive",
+   "id": "northern-anthony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1460,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intermediate-guinea",
+   "id": "absolute-museum",
    "metadata": {},
    "outputs": [],
    "source": []
